Fixed text not showing in header on light background and page margins

--- a/src/style.less
+++ b/src/style.less
@@ -67,3 +67,16 @@ h5 {
 @import "less/footer";
 @import "less/front-page";
 @import "less/navigation";
+
+article {
+  margin-top: 3rem;
+  h1, h2, h3, h4, h5, p {
+    max-width: calc(33rem + 10vw);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 5vw;
+  }
+  h3 {
+    margin-top: 5rem;
+  }
+}
